setup/kiali-vs-gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-kiali
  namespace: istio-system
spec:
  hosts:
  - kiali.aj.com
  gateways:
  - istio-ingress-gateway
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port: 
          number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingress-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use the istio ingress gateway deployment
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
